Moved all file to the appropriate folders

--- a/client/student/student-course-attendance.html
+++ b/client/student/student-course-attendance.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Attendance History</title>
 </head>
 <body>
@@ -67,9 +67,9 @@
             <div class="red">absent</div>
         </footer>
         <button class = "dark-mode-toggle">
-            <img src="assets/darkmode-toggle.svg" alt="image could not load">
+            <img src="../assets/darkmode-toggle.svg" alt="image could not load">
         </button>
     </main>
-    <script src="js/darkmode.js"></script>
+    <script src="../js/darkmode.js"></script>
 </body>
 </html>
