--- a/client/student/student-course-index.html
+++ b/client/student/student-course-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <title>AMS</title>
 </head>
@@ -16,7 +16,6 @@
                     <li><a href="#" tabindex="-1"><button class="highlighted">attendance</button></a></li>
                     <li><a tabindex="-1" href="student-course-attendance.html"><button>history</button></a></li>
             </ul>
-
         </nav>
         <div id="title-wrapper">
             <header id="title-card">
@@ -28,7 +27,7 @@
         <section id="attendance-view">
             <a href="#" tabindex="-1" >
                 <button>
-                    <img src="assets/tap.svg" alt="this image could not load">
+                    <img src="../assets/tap.svg" alt="this image could not load">
                     <p>clock in</p>
                 </button>
             </a>
@@ -53,9 +52,9 @@
             </div>
         </section>
         <button class = "dark-mode-toggle">
-            <img src="assets/darkmode-toggle.svg" alt="image could not load">
+            <img src="../assets/darkmode-toggle.svg" alt="image could not load">
         </button>
     </main>
-        <script src="js/darkmode.js"></script>
+        <script src="../js/darkmode.js"></script>
 </body>
 </html>
