--- a/client/auth/forgot-password.html
+++ b/client/auth/forgot-password.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Forgot Password</title>
 </head>
 <body>
-    <h1>ADMIN LOGIN</h1>
-    <span id="name">John</span>
-    <script src="../js/departments.js"></script>
+    
 </body>
 </html>
