--- a/client/student/student-course-index.html
+++ b/client/student/student-course-index.html
@@ -19,9 +19,9 @@
         </nav>
         <div id="title-wrapper">
             <header id="title-card">
-                <p id="course-title">Introduction To Lorem</p>
-                <p id="course-code">LOREM 101</p>
-                <p id="lecturer">John Doe</p>
+                <p id="course-title"></p>
+                <p id="course-code"></p>
+                <p id="lecturer"></p>
             </header>
         </div>
         <section id="attendance-view">
