--- a/client/404.html
+++ b/client/404.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOT FOUND</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>NOT FOUND | ATMIS</title>
 </head>
 <body>
-    <h1>404 page</h1>
+    <main class="page-404">
+        <h1 class="error404">404</h1>
+        <hr>
+        <h2 class="sub-head">Sorry, this page does not exist</h2>
+            <a href="index.html" tabindex="-1"><button>Go to login</button></a>
+    </main>
 </body>
 </html>
