implemented handshakes - submit attendance and login for student/lecturer. Also created insomnia docs

--- a/client/student/image-capture/Attendance.html
+++ b/client/student/image-capture/Attendance.html
@@ -21,11 +21,14 @@
                 <div class="canvas-container">
                     <canvas id="canvas" width="600" height="480"></canvas>
                 </div>
-                <a id="anchor"><button onclick="next()" class="btn2">NEXT</button></a>
+                <!-- <a id="anchor"><button onclick="next()" class="btn2">NEXT</button></a> -->
+                <a id="anchor"><button name="submitAttendanceBtn" class="btn2 submitAttendanceBtn">NEXT</button></a>
+
             </div>
         </div>
     </div>
 </main>   
-    <script src="Attendance.js"></script>
+    <!-- <script src="Attendance.js"></script> -->
+    <script type="module" src="../../js/attendance.js"></script>
 </body>
 </html>
