--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,6 @@
             </div>
         </section>
     </form>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
