Gave frontend files and folder better structure. Implemented student/lecturer login, reset password and forgot password

--- a/client/404.html
+++ b/client/404.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Page not found">
+    <link rel="stylesheet" href="/css/style.css">
     <title>NOT FOUND | ATMIS</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <h1 class="error404">404</h1>
         <hr>
         <h2 class="sub-head">Sorry, this page does not exist</h2>
-            <a href="index.html" tabindex="-1"><button>Go to login</button></a>
+            <a href="/" tabindex="-1"><button>Go to login</button></a>
     </main>
 </body>
 </html>
