--- a/client/Reset-Password.html
+++ b/client/Reset-Password.html
@@ -5,24 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Reset | ATMIS</title>
-    <link rel="stylesheet" href="admin/css/style.css">
+    <link rel="stylesheet" href="/css/password.css">
 </head>
 <body>
     
     <div class="container">
         <div class="myform">
-            <form id="form" method="post" novalidate>
+            <form id="form" method="post">
             <h2>Reset Password</h2>
+            <div class="rPSuccess"></div>
+
             <p class="desc">Enter a new password and confirm it</p>
             <small id="error" aria-live="polite"></small>
             <input id="password" type="password" placeholder="Password" name="password">
-            <img id="eyecon" class="nonvisible" src="../../client/assets/password-visibility.svg" alt="Image could not load" onclick="showpass">
+            <img id="eyecon" class="nonvisible" src="/assets/password-visibility.svg" alt="Image could not load">
             <input id="confirm" type="password" placeholder="Confirm Password" name="confirm">
-            <img id="eyecon-2" class="nonvisible" src="../../client/assets/password-visibility.svg" alt="Image could not load" onclick="showpass">
+            <img id="eyecon-2" class="nonvisible" src="/assets/password-visibility.svg" alt="Image could not load" >
+            
+
+            <strong style="padding-right: 15%;"> <a href="/"> Back to Login</a> </strong>
+
             <button type="submit">CONFIRM</button>
+
+
             </form>
         </div>
     </div>
-    <script src="js/reset.js"></script>
+    <!-- <script src="js/reset.js"></script> -->
+    <script type="module"  src="js/script.js"></script>
+
 </body>
 </html>
