--- a/client/index.html
+++ b/client/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="BU Attendance management system. For helping lecturers and students to manage thteir course attendance">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Login | ATMIS</title>
 </head>
 <body>
     <form class="login" method="post" novalidate>
+    <!-- <form class="login" method="post" > -->
         <section class="side">
             <div class="choose-role">
                 <h1>Login As</h1>
                 <div class="roles">
                     <div class="student">
                         <input type="radio" name="role" value="student" checked>
-                        <img src="assets/student.svg" alt="Click here For student">
+                        <img src="/assets/student.svg" alt="Click here For student">
                         <p>student</p>
                     </div>
                     <div class="lecturer">
                         <input type="radio" name="role" value="lecturer">
-                        <img src="assets/teacher.svg" alt="Click here For Lecturer">
+                        <img src="/assets/teacher.svg" alt="Click here For Lecturer">
                         <p>lecturer</p>
                     </div>
                 </div>
@@ -59,12 +60,13 @@
                         <input id="password" type="password" placeholder="Password">
                         <i class="fas fa-lock"></i>
                     </div>
-                    <a href="Change-Password.html">Forgot Password?</a>
+                    <a href="forgot-password.html">Forgot Password?</a>
                     <button type="submit">Login</button>
                 </div>
             </div>
         </section>
     </form>
+    <!-- <script type="module" src="/js/script.js"></script> -->
     <script type="module" src="js/script.js"></script>
 </body>
 </html>
