--- a/client/lecturer/index.html
+++ b/client/lecturer/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lecturer View</title>
 </head>
 <body>
-    <h1>ADMIN LOGIN</h1>
-    <span id="name">John</span>
-    <script src="../js/departments.js"></script>
+
+    <h1> Lecturer Landing Page After successful login </h1>
+    
 </body>
 </html>
