--- a/client/student/student-course-attendance.html
+++ b/client/student/student-course-attendance.html
@@ -70,6 +70,6 @@
             <img src="../assets/darkmode-toggle.svg" alt="image could not load">
         </button>
     </main>
-    <script src="../js/darkmode.js"></script>
+    <script src="js/darkmode.js"></script>
 </body>
 </html>
