--- a/client/student/index.html
+++ b/client/student/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https: //fonts.google.com/specimen/Kumbh+Sans/css?family=sad"
@@ -32,6 +32,8 @@
     </style>
   </head>
   <body>
+
+    <h1>Student Landing Page after Login</h1>
     <header></header>
     <div class="page">
       <a href="#">
