Updated frontend code to include all necessary pages for student view. Added comments to serve as guideline to the creation/improvisation for pages. Also fixed picture upload issue on backend

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
                 </div>
             </div>
         </section>
+        <!-- This is for mobile and Everything here works.. however please try to also look at the checkbox issue on your phone for mobile -->
         <section class="main">
             <div class="login-container">
                 <p class="title">Welcome</p>
