--- a/client/student/attendance-history.html
+++ b/client/student/attendance-history.html
@@ -1,3 +1,8 @@
+<!-- Attendance history page for a course -->
+
+<!-- One of the original pages... Please change the design to show attendance history as the students picture, 
+    date the attendance was captured and the time. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +17,8 @@
         <nav>
             <!-- <div id="logo">AMS<span class="purple">.</span></div> -->
             <ul id="views">
-                    <li><a href="student-course-index.html" tabindex="-1"><button>attendance</button></a></li>
+                <!-- Would make url to be dynamic with javascript to include ? search params (course id) -->
+                    <li><a href="course.html" tabindex="-1"><button>attendance</button></a></li>
                     <li><a tabindex="-1"><button class="highlighted">history</button></a></li>
             </ul>
 
