--- a/client/student/capture-attendance.html
+++ b/client/student/capture-attendance.html
@@ -1,12 +1,17 @@
+<!-- ATTENDANCE CAPTURING PAGE... Please restyle/work on (This page is only accessible when a student wants to submit attendance
+    for a particular course (from the course.html page) and has been allowed by the lecturer) OR/AND
+this page should have a way to show errors to the users if their attendance was not captured or a success message
+ (maybe/preferably in a modal or can redirect them to the capture-success-page.html) (NB: The page is already connected to the backend)-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/css/attendance.css">
+    <title>Course Attendance Capturing Page</title>
+
+    <link rel="stylesheet" href="css/attendance.css">
 </head>
 <body>
 <main class="image-capture">
