--- a/client/student/capture-success-page.html
+++ b/client/student/capture-success-page.html
@@ -1,10 +1,15 @@
+<!-- ATTENDANCE SUCCESSFULLY CAPTURED PAGE -->
+
+<!-- Could show this pop up after an attendance has been successfully captured with a link to go back to the home page -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/attendance.css">
     <title>Attendance Succesful | ATMIS</title>
 </head>
 <body>
@@ -30,10 +35,10 @@
              </tbody>
             </table>
             <h4>Attendance Capture Succesful</h4>
-            <img src="check-success.svg" alt="Your Check-In was successful">
+            <img src="../assets/check-success.svg" alt="Your Check-In was successful">
             <a href="#"><button class="button-okay">OKAY</button></a>
         </div>
     </main>
-    <script src="capture.js"></script>
+    <script src="js/capture.js"></script>
 </body>
 </html>
