--- a/client/student/index.html
+++ b/client/student/index.html
@@ -1,3 +1,10 @@
+
+
+<!-- This is the landing page for when a student logins. The landing page should show all their courses and when
+they click on any course they should be redirected to the particular course page. It should have an opportunity (a navbar) for them to see
+their profile and option for them to logout or update their password (profile page could be in a pop-up modal or
+in the separate profile.html (use if you feel it's needed) page ) -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,6 +26,7 @@
 
     <title>Course List|students&lecturers</title>
 
+    <!-- THIS IS AN OLD COMMENT -->
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
@@ -35,8 +43,10 @@
 
     <h1>Student Landing Page after Login</h1>
     <header></header>
+
+    <!-- Courses shown on this page would be dynamic and their links will be dynamic as opposed to static -->
     <div class="page">
-      <a href="#">
+      <a href="course.html">
         <div class="container1">
           <div class="bg-img1"></div>
           <div class="card-image1"></div>
@@ -62,7 +72,7 @@
 
       <!-- second class profile -->
 
-      <a href="#">
+      <a href="course.html">
         <div class="container1">
           <div class="bg-img2"></div>
           <div class="card-image2"></div>
@@ -86,7 +96,7 @@
         </div>
       </a>
       <!-- Last course Profile -->
-      <a href="#">
+      <a href="course.html">
         <div class="container1">
           <div class="bg-img3"></div>
           <div class="card-image3"></div>
