--- a/client/student/profile.html
+++ b/client/student/profile.html
@@ -1,19 +1,15 @@
+<!-- Just a simple Student profile page... Students should be able to see their name, email, matric no, level, department here
+They should also be able to update their password here. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lecturer View</title>
+    <title>Student Profile Page</title>
 </head>
 <body>
-
-    <!-- Responsive sidebar -->
-    <section>
-
-    </section>
-
-    <h1> Lecturer Landing Page After successful login </h1>
     
 </body>
 </html>
